# ecir24-seo-spam-in-search-engines

./: .gitignore  README.md  pyproject.toml
serp_crawler/: setup.py
serp_crawler/resources/: google-ranker-updates.txt  product-queries.txt
serp_crawler/scriptor_config/: Script.js  package-lock.json  package.json
serp_crawler/scriptor_config/blocklist-src/: 02-adguard-annoyances.txt  03-adguard-annoyances-cookies.txt  04-adguard-annoyances-popups.txt  99-custom.txt
serp_crawler/serp_crawler/: config.py  crawler.py
serp_crawler/serp_crawler/templates/: page_crawler.k8s.yaml.jinja2
warc_analysis/: elasticsearch_index_template.json  setup.py
warc_analysis/resources/: feature-correlations-rank-affiliate.xlsx  feature-correlations-rank-bootstrap-old.xlsx  feature-correlations-rank-bootstrap.xlsx  feature-correlations-rank-dependent.xlsx  feature-correlations-rank-normal-dist.xlsx  reviews-non-reviews-annotated-1.csv  reviews-non-reviews-annotated-2.csv  reviews-non-reviews-classification.csv
warc_analysis/resources/evaluation_examples/: top-affiliate-domains_1.csv  top-affiliate-domains_2.csv  top-domain-classification.txt
warc_analysis/warc_analysis/: config.py  correlation_analysis.py  es_scroll.py  gpt_detector.py  process.py
