[tool.poetry]
name = "affiliate-marketing-and-search"
version = "0.1.0"
description = ""
authors = [
    "Janek Bevendorff <janek.bevendorff@uni-weimar.de>",
    "Matti Wiegmann <matti.wiegmann@uni-weimar.de>"
]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = 'serp_crawler', from = 'serp_crawler' },
    { include = 'warc_analysis', from = 'warc_analysis' }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
click = "^8.1.7"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
scikit-learn = "^1.4.1.post1"
scipy = "^1.12.0"
numpy = "^1.26.4"
spacy = "^3.7.4"
tqdm = "^4.66.2"
publicsuffix = "^1.1.1"
elasticsearch = "^8.12.1"
xgboost = "^2.0.3"
pandas = "^2.1.0"
webp = "^0.3.0"
jupyter = "^1.0.0"

[tool.poetry.group.youtube.dependencies]
krippendorff = "^0.6.1"
youtube-transcript-api = "^0.6.2"

[tool.poetry.group.crawler.dependencies]
chatnoir-api = "^2.1.10"
httpx = "^0.27.0"
jinja2 = "^3.1.3"
resiliparse = "^0.14.5"
# Beam cannot be installed via Poetry right now (dependency conflicts)
# Install manually with pip install apache-beam
#apache-beam = "^2.54.0"

[tool.poetry.group.warc_analysis.dependencies]
boto3 = "^1.34.56"
datasets = "^2.18.0"
torch = "^2.2.1"
transformers = "^4.38.2"
textstat = "^0.7.3"
orjson = "^3.9.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
serp-crawl = 'serp_crawler.crawler:main'
warc-analyze = 'warc_analysis.process:main'
gpt-detector = 'warc_analysis.gpt_detector:main'
warc-correlation = 'warc_analysis.correlation_analysis:main'
